<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/avatarContainer"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        app:cardCornerRadius="50dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/avatar"
            android:src="@drawable/avatar" />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avatarContainer"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textWebPassword" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignStart="@id/password"
        android:layout_alignEnd="@+id/password"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:text="@string/login" />


</RelativeLayout>